[gd_scene load_steps=11 format=2]

[ext_resource path="res://UIElements/HUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Animated.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UIElements/EndScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://UIElements/Resources/AlarmStylebox.tres" type="StyleBox" id=4]
[ext_resource path="res://UIElements/PowerBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://UIElements/Resources/WindowStylebox.stylebox" type="StyleBox" id=6]
[ext_resource path="res://UIElements/ProgressBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://UIElements/Tutorial.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 60
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "alarmFlash"
length = 1.95
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AlarmPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.65, 1, 1.3, 1.65, 1.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.117647 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.117647 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.117647 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.05
margin_left = -1.8877
margin_right = -1.8877
margin_bottom = 37.6
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelVBox" type="VBoxContainer" parent="HBox"]
margin_right = 117.0
margin_bottom = 124.0
mouse_filter = 2

[node name="Label" type="Label" parent="HBox/LevelVBox"]
margin_right = 117.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Level"

[node name="LevelNumberLabel" type="Label" parent="HBox/LevelVBox"]
margin_top = 64.0
margin_right = 117.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="Control" type="Control" parent="HBox"]
margin_left = 121.0
margin_right = 257.0
margin_bottom = 124.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBox"]
margin_left = 261.0
margin_right = 1630.0
margin_bottom = 124.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 1

[node name="Control" type="Control" parent="HBox/VBoxContainer2"]
margin_right = 1369.0
margin_bottom = 25.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="PowerBar" parent="HBox/VBoxContainer2" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 29.0
margin_right = 1369.0
margin_bottom = 94.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control2" type="Control" parent="HBox/VBoxContainer2"]
margin_top = 98.0
margin_right = 1369.0
margin_bottom = 124.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="Control2" type="Control" parent="HBox"]
margin_left = 1634.0
margin_right = 1881.0
margin_bottom = 124.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.18

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
anchor_left = 0.01
anchor_top = 0.015
anchor_right = 0.05
anchor_bottom = 0.015
margin_left = 3.312
margin_top = 130.0
margin_right = 1920.31
margin_bottom = 190.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="VBoxContainer3"]
margin_right = 1993.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "01:00"

[node name="StatusPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_top = -521.0
margin_right = 406.0
margin_bottom = -36.0
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StatusPanel"]
visible = false
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_top = 0.5
margin_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="StatusPanel/VBoxContainer"]
margin_right = 296.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Title"
align = 1

[node name="TextureProgress" parent="StatusPanel/VBoxContainer" instance=ExtResource( 7 )]

[node name="EndScreen" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Tutorial" parent="." instance=ExtResource( 8 )]
visible = false

[node name="AlarmPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlarmAnimationPlayer" type="AnimationPlayer" parent="."]
anims/alarmFlash = SubResource( 2 )
